[FIX] adding extra margin to our-creations section

--- a/src/scss/our-creations/_our-creations.scss
+++ b/src/scss/our-creations/_our-creations.scss
@@ -2,7 +2,7 @@
 @use 'base/mixins' as m;
 
 .our-creations {
-    margin-bottom: 5rem;
+    margin-bottom: 8.5rem;
 
     .our-creations-content {
         display: flex;
